--- a/src/_includes/job.njk
+++ b/src/_includes/job.njk
@@ -14,12 +14,12 @@ layout: layout.njk
         <div class="flex flex-col md:flex-row gap-8 w-full">
 
             <div class="w-full md:w-3/5">
-                <div class="text-3xl mx-auto md:px-8 prose dark:prose-dark">
+                <div class="text-xl mx-auto md:px-8 prose dark:prose-dark">
                     {{ content | safe }}
                 </div>                
             </div>
             <div class="w-full md:w-2/5">
-                <h3 class="font-bold star">Roles</h3>
+                <h3 class="instrument-serif text-3xl">❋ Roles</h3>
                 <ul class="list-none">
                     {% for role in roles %}
                         <li>{{role}}</li>
