--- a/src/work.njk
+++ b/src/work.njk
@@ -15,25 +15,23 @@ permalink: /work/{{ tag }}/
     {% pillbutton page, 'Small Business', '/work/business/' %}
     {% pillbutton page, 'Education', '/work/education/' %} 
 </div>
-<div class="w-full full-width border-b border-gray-10 dark:border-blue-950">
+<div class="w-full full-width border-b border-gray-100 dark:border-gray-800 ">
     {% set taglist = collections[ tag ] | sort(attribute='data.year') | reverse %}
     {% for post in taglist %}
-    <a href="{{post.url}}" class="flex flex-row justify-between px-4 md:px-8 py-4 items-center gap-4 md:gap-8 w-full block border-t border-gray-200 hover:bg-gray-100 dark:hover:bg-blue-950 dark:border-gray-900 text-lg md:text-xl stroke-blue-900 hover:stroke-red-600 ">
+    <a href="{{post.url}}" class="flex flex-row justify-between px-4 md:px-8 py-4 items-center gap-4 md:gap-8 w-full block border-t border-gray-100 dark:border-gray-800 hover:bg-gray-100 dark:hover:bg-gray-800 text-lg md:text-xl">
         
-        <div class="w-2/12 md:w-1/12">
+        <div class="w-2/12 md:w-1/12 text-gray-900 dark:text-white">
             {{post.data.year}}
         </div>            
-        <div class="w-7/12 md:w-4/12 text-left">
+        <div class="w-7/12 md:w-4/12 text-left text-gray-900 dark:text-white">
             {{post.data.title}}
         </div>
         
-        <div class="hidden md:w-3/12 md:block">
+        <div class="hidden md:w-3/12 md:block text-gray-900 dark:text-white">
             {{post.data.tech}}
         </div>     
-        <div class="text-right">
-            <svg class="" width="26" height="24" viewBox="0 0 26 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M17.4514 13.7878L1.13 13.7878L1.13 10.5153L17.4516 10.5153L18.6587 10.5153L17.8052 9.66171L11.9869 3.84337L14.3009 1.52937L24.9229 12.1514L14.3008 22.7735L11.9868 20.4595L17.805 14.6413L18.6585 13.7878L17.4514 13.7878Z" />
-            </svg>
+        <div class="text-right text-gray-900 dark:text-white">
+            ->
         </div>
 
     </a>
